[gd_scene load_steps=3 format=2]

[ext_resource path="res://sources/scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://sources/themes/def_theme.tres" type="Theme" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="vb" type="VBoxContainer" parent="margin"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 1230.0
custom_constants/separation = 50

[node name="hb" type="HBoxContainer" parent="margin/vb"]
margin_right = 620.0
margin_bottom = 29.0
alignment = 1

[node name="money" type="Label" parent="margin/vb/hb"]
margin_left = 308.0
margin_right = 308.0
margin_bottom = 29.0

[node name="exp" type="Label" parent="margin/vb/hb"]
margin_left = 312.0
margin_right = 312.0
margin_bottom = 29.0

[node name="vb_btn" type="VBoxContainer" parent="margin/vb"]
margin_top = 79.0
margin_right = 620.0
margin_bottom = 1030.0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2

[node name="i1" type="Button" parent="margin/vb/vb_btn"]
margin_top = 841.0
margin_right = 620.0
margin_bottom = 891.0
rect_min_size = Vector2( 0, 50 )
text = "- 0.160 exp (1 virus)"

[node name="i10" type="Button" parent="margin/vb/vb_btn"]
margin_top = 901.0
margin_right = 620.0
margin_bottom = 951.0
rect_min_size = Vector2( 0, 50 )
text = "- 1.600 exp (10 viruses)"

[node name="Button" type="Button" parent="margin/vb"]
margin_top = 1080.0
margin_right = 620.0
margin_bottom = 1180.0
rect_min_size = Vector2( 0, 100 )
text = "Клик"

[connection signal="pressed" from="margin/vb/vb_btn/i1" to="." method="_on_i1_pressed"]
[connection signal="pressed" from="margin/vb/vb_btn/i10" to="." method="_on_i10_pressed"]
[connection signal="pressed" from="margin/vb/Button" to="." method="_on_Button_pressed"]
